# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  14 Apr 2005; Martin Schlemmer <azarah@gentoo.org>:

    Do not kill udevd in /sbin/rc, as it is apparently evil.

  14 Apr 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed ifconfig and iproute2 erroring from new lo code - fixes #88006

    If /proc/net/netlink does not exist then iproute2 will fail the
    check_installed function with an appropriate error - Thanks to
    Jeremy Huddleston for the patch.

    If /proc/net/packet does not exist then wpa_supplicant will fail
    check_installed function with an appropriate error

    Background fixes for net.lo, udhcpc and wpa_supplicant

  11 Apr 2005; Roy Marples <uberlord@gentoo.org>:

    removed ${devnull} from net.lo and net-script modules
    updated all modules not to re-direct stderr where appropriate

    iwconfig and wpa_supplicant now save their current ESSID via save_options
    and reload it in their pre_stops so that ${ESSID} and ${ESSIDVAR} can be
    used in users custom postdown functions

    wpa_supplicant now calls iwconfig_defaults and iwconfig_user_config
    if available - fixes #88703

  09 Apr 2005; Mike Frysinger <vapier@gentoo.org>:

    Have the 'status' function return 0/1 based upon the status of the 
    init script #88319 by Josh Nichols.

  08 Apr 2005; Roy Marples <uberlord@gentoo.org>:

    added a bash_variable to functions.sh which converts the given string
    into a variable that bash can use - fixes #88175

    net scripts can only launch if we're not in ${BOOTLEVEL} - fixes #78495

  01 Apr 2005; Roy Marples <uberlord@gentoo.org>:

    RC_DAEMON_syslog_ng allows syslog-ng to be started with the specified
    launcher - like valgrind or strace. Handy for debugging/auditing.
    Thanks to Rob Holland for the idea.

    Stopped setting ESSID in predown functions in iwconfig and wpa_supplicant