@@ -1,11 +1,0 @@
-#!/bin/bash
-# 
-# This is only installed by baselayout when USE=livecd to enable
-# serial consoles for some architectures
-#
-
-cat /etc/motd 2>/dev/null
-cd /root
-[ -e .bashrc ] && source .bashrc
-[ -e .bash_profile ] && source .bash_profile
-exec -l /bin/bash
